--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,23 +30,24 @@ dist.jar=${dist.dir}/FalconDelivery.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.4.jar=C:\\Users\\Luish\\Documents\\Libs\\commons-codec-1.4.jar
-file.reference.controlsfx-8.40.11.jar=C:\\Users\\Luish\\Documents\\Libs\\controlsfx-8.40.11.jar
-file.reference.fontawesomefx-commons-8.15.jar=C:\\Users\\Luish\\Documents\\Libs\\fontawesomefx-commons-8.15.jar
-file.reference.fontawesomefx-controls-8.15.jar=C:\\Users\\Luish\\Documents\\Libs\\fontawesomefx-controls-8.15.jar
-file.reference.fontawesomefx-emojione-2.2.7-2.jar=C:\\Users\\Luish\\Documents\\Libs\\fontawesomefx-emojione-2.2.7-2.jar
-file.reference.fontawesomefx-fontawesome-4.7.0-5.jar=C:\\Users\\Luish\\Documents\\Libs\\fontawesomefx-fontawesome-4.7.0-5.jar
-file.reference.fontawesomefx-glyphsbrowser-1.3.0.jar=C:\\Users\\Luish\\Documents\\Libs\\fontawesomefx-glyphsbrowser-1.3.0.jar
-file.reference.fontawesomefx-icons525-3.0.0-4.jar=C:\\Users\\Luish\\Documents\\Libs\\fontawesomefx-icons525-3.0.0-4.jar
-file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar=C:\\Users\\Luish\\Documents\\Libs\\fontawesomefx-materialdesignfont-1.7.22-4.jar
-file.reference.fontawesomefx-materialicons-2.2.0-5.jar=C:\\Users\\Luish\\Documents\\Libs\\fontawesomefx-materialicons-2.2.0-5.jar
-file.reference.fontawesomefx-octicons-4.3.0-5.jar=C:\\Users\\Luish\\Documents\\Libs\\fontawesomefx-octicons-4.3.0-5.jar
-file.reference.fontawesomefx-weathericons-2.0.10-5.jar=C:\\Users\\Luish\\Documents\\Libs\\fontawesomefx-weathericons-2.0.10-5.jar
-file.reference.jfoenix-8.0.1.jar=C:\\Users\\Luish\\Documents\\Libs\\jfoenix-8.0.1.jar
+file.reference.commons-codec-1.4.jar=Libs/commons-codec-1.4.jar
+file.reference.controlsfx-8.40.11.jar=Libs/controlsfx-8.40.11.jar
+file.reference.fontawesomefx-commons-8.15.jar=Libs/fontawesomefx-commons-8.15.jar
+file.reference.fontawesomefx-controls-8.15.jar=Libs/fontawesomefx-controls-8.15.jar
+file.reference.fontawesomefx-emojione-2.2.7-2.jar=Libs/fontawesomefx-emojione-2.2.7-2.jar
+file.reference.fontawesomefx-fontawesome-4.7.0-5.jar=Libs/fontawesomefx-fontawesome-4.7.0-5.jar
+file.reference.fontawesomefx-glyphsbrowser-1.3.0.jar=Libs/fontawesomefx-glyphsbrowser-1.3.0.jar
+file.reference.fontawesomefx-icons525-3.0.0-4.jar=Libs/fontawesomefx-icons525-3.0.0-4.jar
+file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar=Libs/fontawesomefx-materialdesignfont-1.7.22-4.jar
+file.reference.fontawesomefx-materialicons-2.2.0-5.jar=Libs/fontawesomefx-materialicons-2.2.0-5.jar
+file.reference.fontawesomefx-octicons-4.3.0-5.jar=Libs/fontawesomefx-octicons-4.3.0-5.jar
+file.reference.fontawesomefx-weathericons-2.0.10-5.jar=Libs/fontawesomefx-weathericons-2.0.10-5.jar
+file.reference.jfoenix-8.0.1.jar=Libs/jfoenix-8.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.commons-codec-1.4.jar}:\
     ${file.reference.controlsfx-8.40.11.jar}:\
     ${file.reference.fontawesomefx-commons-8.15.jar}:\
@@ -59,8 +60,7 @@ javac.classpath=\
     ${file.reference.fontawesomefx-materialicons-2.2.0-5.jar}:\
     ${file.reference.fontawesomefx-octicons-4.3.0-5.jar}:\
     ${file.reference.fontawesomefx-weathericons-2.0.10-5.jar}:\
-    ${file.reference.jfoenix-8.0.1.jar}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${file.reference.jfoenix-8.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
